Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.7.0, Impala 2.8.0, Impala 2.9.0, Impala 2.10.0
-
None
-
ghx-label-8
Description
If using TLS, Thrift's TSSLSocketFactory constructor might throw an exception if there was an error initializing the SSL context.
We don't currently catch that error, meaning that a misconfiguration leads to an unexpected process death.