IMPALA-5825: Catch exceptions thrown by TSSLSocketFactory c'tor

Change-Id: I9b1698ee423c0db419b5de74c3664c88294fff49
Reviewed-on: http://gerrit.cloudera.org:8080/7768
Reviewed-by: Bharath Vissapragada <bharathv@cloudera.com>
Tested-by: Impala Public Jenkins